--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -10,7 +10,7 @@
 
 .autocomplete-items {
     position: absolute;
-    border: 1px solid #d4d4d4;
+    border: 1px solid darkgray;
     border-bottom: none;
     border-top: none;
     z-index: 99;
@@ -22,17 +22,17 @@
 
 .autocomplete-items div {
     cursor: pointer;
-    background-color: #fff;
-    border-bottom: 1px solid #d4d4d4;
+    background-color: white;
+    border-bottom: 1px solid darkgray;
 }
 
 .autocomplete-items div:hover {
     /*when hovering an item:*/
-    background-color: #e9e9e9;
+    background-color: whitesmoke;
 }
 
 .autocomplete-active {
     /*when navigating through the items using the arrow keys:*/
     background-color: DodgerBlue !important;
-    color: #ffffff;
+    color: whitesmoke;
 }
