--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -23,6 +23,8 @@
 .autocomplete-items div {
     cursor: pointer;
     background-color: white;
+    height: 35px;
+    position: relative;
 }
 
 .autocomplete-items div:hover {
