--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,12 +1,13 @@
 input {
-    height: 25px;
+    height: 35px;
     margin: 3px 0;
     width: 247px;
     border: none;
+    display: inline;
 }
 
 button {
-    height: 30px;
+    height: 35px;
     margin: 5px 0;
     width: 247px;
     background-color: gold;
